--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/chipmunk-pixel/
+        href: https://github.com/8bit-pixies/
 
 format:
   html:
