--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "chipmunk-pixel-github-io"
+name = "8bit-pixies-github-io"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
